[tool.poetry]
name = "covid-19"
version = "0.1.0"
description = ""
authors = ["Angus Hollands <goosey15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.1"
requests = "^2.23.0"
pandas = "^1.0.3"
scipy = "^1.4.1"
numpy = "^1.18.2"
openpyxl = "^3.0.3"
ipywidgets = "^7.5.1"
jupyterlab = "^2.0.1"
ipympl = "^0.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
